--- a/front-end/Assets/src/css/modules/_resource-center.scss
+++ b/front-end/Assets/src/css/modules/_resource-center.scss
@@ -423,7 +423,7 @@ body.no-scroll{
     }
     .card-content{
       clear: both;
-      min-height: 160px;
+      //min-height: 160px;
 	  margin-bottom: 60px;
       h4 {
         color: #414042;
