--- a/aem-project/ui.apps/src/main/content/jcr_root/apps/bmc/components/content/resource-center/resource-center-results/modules/resultItemsTemplate.html
+++ b/aem-project/ui.apps/src/main/content/jcr_root/apps/bmc/components/content/resource-center/resource-center-results/modules/resultItemsTemplate.html
@@ -49,12 +49,25 @@
                         {{/if}}
                     </div>
                     <!--/* WEB-6793 Added new fields for RC Cards END */-->
-                    <!--/* WEB-10350 Removed Svg definitions and added learn-more span - STARt */-->
+                    <!--/* WEB-10350 Added CTAText at the begining of Svg definitions- STARt */-->
                     <hr>
                     <div class="card-footer-action">
-                        <span class="learn-more-v1">{{ctaText}}</span>
+                        {{ctaText}}
+                        {{#ifCond type '===' "Trial"}}
+                            <svg class="align-middle s-view">
+                                <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#s-{{view}}"></use>
+                        {{else}}
+                            {{#ifCond type '===' "Webinar"}}
+                                <svg class="align-middle s-view">
+                                    <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#s-view"></use>
+                            {{else}}
+                                <svg class="align-middle s-{{linkType}}">
+                                    <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#s-{{linkType}}"></use>
+                            {{/ifCond}}
+                        {{/ifCond}}
+                        </svg>
                     </div>
-                     <!--/* WEB-10350 Removed Svg definitions and added learn-more span - END */-->
+                     <!--/* WEB-10350  - END */-->
                 </div>
                 </div>
             </a>
