--- a/aem-project/ui.apps/src/main/content/jcr_root/apps/bmc/components/content/resource-center/resource-center-results/resource-center-results.html
+++ b/aem-project/ui.apps/src/main/content/jcr_root/apps/bmc/components/content/resource-center/resource-center-results/resource-center-results.html
@@ -43,7 +43,9 @@
                 </div>
             </div>
         </div>
-      <div data-sly-test="${featuredCard}" class="rc-card-row" style="padding: 0px;">
+
+        <div data-sly-test="${featuredCard}" class="rc-card-row" style="padding: 0px;">
+            <!--/* WEB-6757- added id to toggle feature card */--> 
             <div class="rc-featured-card-col"  id="rc-featured-card">
                 <a id="rc-featured-card-link" href="${featuredCard.assetLink}" data-sly-attribute="${helper.analiticData}">
                     <!-- desktop featured card -->
