--- a/front-end/Assets/src/css/modules/_resource-center.scss
+++ b/front-end/Assets/src/css/modules/_resource-center.scss
@@ -447,6 +447,7 @@ body.no-scroll{
         line-height: 25px;
         margin-bottom: 15px;
         word-break: break-word;
+        font-size: 18px;
       }
       h2 {
         color: #414042;
