WEB-9670 Updated webinar footer logo case as per latest changes in RC

--- a/aem-project/ui.apps/src/main/content/jcr_root/apps/bmc/components/content/resource-section/resource-section.html
+++ b/aem-project/ui.apps/src/main/content/jcr_root/apps/bmc/components/content/resource-section/resource-section.html
@@ -72,7 +72,7 @@
 											</svg>${card.videoLength}
                                     	</span>
 										<span>
-                                        	<img  data-sly-test="${card.footerLogo && card.contentText != 'play'}" src="${card.footerLogo}" style="max-height:30px;">
+                                        	<img  data-sly-test="${card.footerLogo && card.contentType != 'video'}" src="${card.footerLogo}" style="max-height:30px;">
                                     	</span>
 									</div>
                                     <hr>
