--- a/front-end/Assets/src/css/modules/_resource-center.scss
+++ b/front-end/Assets/src/css/modules/_resource-center.scss
@@ -474,6 +474,7 @@ body.no-scroll{
       }
     }
     .card-footer{
+      //text-align: right;
       background: linear-gradient(to right, #3980B2 50%, white 50%);
       background-size: 200% 102%;
       background-position: right bottom;
