--- a/aem-project/ui.apps/src/main/content/jcr_root/apps/bmc/components/content/resource-center/resource-center-results/resource-center-results.html
+++ b/aem-project/ui.apps/src/main/content/jcr_root/apps/bmc/components/content/resource-center/resource-center-results/resource-center-results.html
@@ -27,7 +27,7 @@
   }
 </style>
 
-<div data-sly-test="${!wcmmode.edit}" class="rc-result-component" data-root-path="${properties.rootPath}" data-page-size="${properties.pageSize}">
+<div data-sly-test="${!wcmmode.edit}" class="rc-result-component" data-category="${properties.category}" data-root-path="${properties.rootPath}" data-page-size="${properties.pageSize}">
     <div class="container pb-4">
         <div class="rc-result-header filter-menu">
             <span class="results-info" data-template="${'Showing {1} - {2} of {3}' @ i18n}"></span>
@@ -43,7 +43,9 @@
                 </div>
             </div>
         </div>
-      <div data-sly-test="${featuredCard}" class="rc-card-row" style="padding: 0px;">
+
+        <div data-sly-test="${featuredCard}" class="rc-card-row" style="padding: 0px;">
+            <!--/* WEB-6757- added id to toggle feature card */--> 
             <div class="rc-featured-card-col"  id="rc-featured-card">
                 <a id="rc-featured-card-link" href="${featuredCard.assetLink}" data-sly-attribute="${helper.analiticData}">
                     <!-- desktop featured card -->
@@ -69,12 +71,11 @@
                             </div>
                             <div class="card-content" style="background: url(${fbImg @ context='uri'}) no-repeat center center / cover;background-size: contain;min-height: 50%;"></div>
                             <div class="featured-card-footer" style="padding-left: 0px;">
+                                <!--/* WEB-10350 Removed Svg definitions and added learn-more span - STARt */-->
                                 <span class="card-footer-action" style="border-top-color:white;">
-                                    <svg class="align-middle s-${footerIcon}-white">
-                                        <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#s-${featuredCard.linkType}-white"></use>
-                                    </svg>
-                                    ${featuredCard.ctaText @ i18n}
+                                     <span class="learn-more-v1"> ${featuredCard.ctaText @ i18n}</span>
                                 </span>
+                                <!--/* WEB-10350 Removed Svg definitions and added learn-more span - END */-->
                             </div>
                         </div>
                     </div>
@@ -91,10 +92,11 @@
                         </div>
                         <div class="featured-card-footer" style="padding-left: 0px;">
                             <span class="card-footer-action" style="border-top-color:white;">
+                                 <!--/* WEB-10350 Removed Svg definitions and added learn-more span - STARt */-->
                                 <svg class="align-middle s-${footerIcon}-white">
-                                    <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#s-${featuredCard.linkType}-white"></use>
+                                      <span class="learn-more-v1"> ${featuredCard.ctaText @ i18n}</span>
                                 </svg>
-                                ${featuredCard.ctaText @ i18n}
+                               <!--/* WEB-10350 Removed Svg definitions and added learn-more span - END */-->
                             </span>
                         </div>
                     </div>
