--- a/front-end/Assets/src/css/modules/_resource-center.scss
+++ b/front-end/Assets/src/css/modules/_resource-center.scss
@@ -1084,6 +1084,7 @@ $bg-forrester-green: #16563F;
 }
 // resource-section WEB-9670
 .resource-section {
+  padding: 40px 0;
   .rc-card-col {
     .card-content{
       h4{
