--- a/front-end/Assets/src/css/modules/_resource-center.scss
+++ b/front-end/Assets/src/css/modules/_resource-center.scss
@@ -285,11 +285,7 @@
     background-size: 5px 5px, 6px 6px, 0px 0em;
     background-repeat: no-repeat;
     outline: none;
-	text-align: right;
-
-    @media (max-width: $break-md) {
-      font-size: smaller;
-    }
+	  text-align: right;
   }
   /*For IE10+*/
   .rc-sort-select-wrapper select::-ms-expand {
@@ -813,7 +809,7 @@ body.no-scroll{
 }
 
 //  Resource center colors and backgrounds
-$bg-bmc-blue: #046eb1;
+$bg-bmc-blue: #3980b2;
 $bg-bmc-mid-blue: #0093c9;
 $bg-bmc-green: #7fbc00;
 $bg-bmc-mid-green: #aacc07;
