WEB-10111 : Fixed RC UI Issue and added updated data category

--- a/aem-project/ui.apps/src/main/content/jcr_root/apps/bmc/components/content/resource-center/resource-center-results/resource-center-results.html
+++ b/aem-project/ui.apps/src/main/content/jcr_root/apps/bmc/components/content/resource-center/resource-center-results/resource-center-results.html
@@ -27,7 +27,7 @@
   }
 </style>
 
-<div data-sly-test="${!wcmmode.edit}" class="rc-result-component" data-category="${properties.category}" data-root-path="${properties.rootPath}" data-page-size="${properties.pageSize}">
+<div data-sly-test="${!wcmmode.edit}" class="rc-result-component" data-category="${properties.resource-category}" data-root-path="${properties.rootPath}" data-page-size="${properties.pageSize}">
     <div class="container pb-4">
         <div class="rc-result-header filter-menu">
             <span class="results-info" data-template="${'Showing {1} - {2} of {3}' @ i18n}"></span>
