WEB-9846 added comments and default as "Learn more" to not disturb the current Product Cards.

--- a/aem-project/ui.apps/src/main/content/jcr_root/apps/bmc/components/content/product-cards/product-cards.html
+++ b/aem-project/ui.apps/src/main/content/jcr_root/apps/bmc/components/content/product-cards/product-cards.html
@@ -35,6 +35,7 @@
 								<p>${card.description  @ context='html'}</p>
 							</div>
 							<div class="card-footer">
+								<!--/* WEB-9846 Product Cards component enhancement */-->
 								<span data-sly-test="${card.ctaText}" class="learn-more">
                                 	${card.ctaText @ context='html', i18n}
                                 </span>                                
