WEB-9846 Fixing the issue with NPE

--- a/aem-project/ui.apps/src/main/content/jcr_root/apps/bmc/components/content/product-cards/product-cards.html
+++ b/aem-project/ui.apps/src/main/content/jcr_root/apps/bmc/components/content/product-cards/product-cards.html
@@ -38,7 +38,10 @@
 								<!--/* WEB-9846 Product Cards component enhancement */-->
 								<span data-sly-test="${card.ctaText}" class="learn-more">
                                 	${card.ctaText @ context='html', i18n}
-                                </span>                                
+                                </span>
+								<span data-sly-test="${!card.ctaText}" class="learn-more">
+                                	${'Learn more' @ i18n}
+                                </span>
 							</div>
 						</div>
 					</a>
